Version 2.7.0 - IN PROGRESS
================================================================================

Add support for JSON column values for Oracle #131

Add YearMonthTimestampType #127

Ability to use PostgreSQLEnumType and EnumArrayType with TypedParameterValue #125

Version 2.6.1 - August 29, 2019
================================================================================

Add support for Oracle Interval Day to Second column type #123

Version 2.6.0 - August 23, 2019
================================================================================

ImmutableType should also implement the Type interface #119

Remove unnecessary null checks and PGobject instantiations #118

Add support for the PostgreSQL citext type #117

Version 2.5.1 - August 15, 2019
================================================================================

Add support for PostgreSQL Interval column type #53

Add missing type INSTANCE constants #111

Upgrade Jackson Databind artifact version

Version 2.5.0 - July 05, 2019
================================================================================

Add handling for null PostgreSQL Range column values #106

Add PostgreSQL UUID ARRAY support #105

Allow the Configuration to be accessed by all custom Types #107

Version 2.4.4 - June 06, 2019
================================================================================

Update Javadoc to specify which JSON types are suitable for PostgreSQL and MySQL.

Add ZoneIdType to map the java.time.ZoneId to a VARCHAR-based column #103

Replace reflection usage in PostgreSQL Types with Driver-specific API calls #99

In case the JSON attribute is a java.util.Set, an additional SQL UPDATE is executed when persisting the entity #100

Version 2.4.3 - April 07, 2019
================================================================================

Adjustment in ZoneDateTime pattern for 1-6 nanoseconds digits #90

Array types use a singleton Java descriptors and that prevents them from being