@@ -3,6 +3,8 @@ Version 2.7.0 - IN PROGRESS
 
 Add support for JSON column values for Oracle #131
 
+Add support for mapping the Java Period object to a PostgreSQL interval type #128
+
 Add YearMonthTimestampType #127
 
 Ability to use PostgreSQLEnumType and EnumArrayType with TypedParameterValue #125
